# robinhood-codex-agent

./: .gitignore  KILL_SWITCH  README.md  TODO_FIX.md  cron.example  pyproject.toml
.codex/: config.toml
.streamlit/: config.toml
config/: allowlist.txt  dsa_strategy_weights.json  risk.md  risk_tiers.json  runtime.env  strategy.md  universe.txt
docs/: daily-strategy-playbook.md  design-prompt-token-optimization.md  project-review-2026-06-15.md  project-status.md  roadmap-archive.md  roadmap.md  smoke-test.md  status-2026-06-15.md  strategy-changelog.md
launchd/: com.yinyin.robinhood-codex-agent.intraday.plist.example  com.yinyin.robinhood-codex-agent.postmarket.plist.example  com.yinyin.robinhood-codex-agent.premarket.plist.example  robinhood-codex-agent.intraday.plist.example  robinhood-codex-agent.nightly-analysis.plist.example  robinhood-codex-agent.postmarket.plist.example  robinhood-codex-agent.premarket.plist.example  robinhood-codex-agent.weekly-screen.plist.example
prompts/: dsa_premarket_scan.txt  intraday_check.txt  postmarket_summary.txt  premarket_research.txt  technical_research.txt
scripts/: check_safety.sh  collect_market_feed.py  common.sh  install_repo_skills.sh  kronos_generate_signals.py  run_all_paper_once.sh  run_dsa_premarket_scan.sh  run_intraday.sh  run_kronos_premarket_scan.sh  run_market_feed_collection.sh  run_postmarket.sh  run_premarket.sh  run_symbol_research.sh  run_technical_research.sh  setup_kronos_env.sh  verify_kronos_env.sh  verify_repo_skills.sh
tests/: test_collect_market_feed.py  test_contracts.py  test_core_runtime.py  (+11 more)
(+414 files in other folders)
