[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agent"
version = "0.1.0"
description = "Package-owned trading automation runtime"
requires-python = ">=3.11"

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["trading_agent*"]
